--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ package-dir = {"tentoku" = "."}
 
 [project]
 name = "tentoku"
-version = "0.1.2"
+version = "0.1.4"
 description = "Japanese text tokenization with deinflection support, reimplementing the algorithm from 10ten Reader"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -24,6 +24,9 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Topic :: Text Processing :: Linguistic",
 ]
 
