Add trie-accelerated dictionary for faster tokenization
Implement marisa-trie based dictionary acceleration that provides O(key_length)
existence checks, dramatically reducing SQLite queries during tokenization.

Key changes:
- Add TrieAcceleratedDictionary using marisa-trie for fast lookups
- Add build_trie.py to create trie indexes from SQLite dictionaries
- Integrate trie dictionary as default when marisa-trie is available
- Optimize word_search to use exists() method for candidate filtering
- Add get_entries_by_ids() to OptimizedSQLiteDictionary for trie integration
- Cache deinflect rule groups to avoid repeated processing
- Add comprehensive tests and benchmark script for trie performance

The trie stores dictionary keys (kanji forms and readings) mapped to entry IDs,
allowing fast existence checks before expensive SQLite lookups. Full entry data
is still fetched from SQLite, but only for entries that actually match.

This builds upon the previous SQLite optimization commit by adding an
additional acceleration layer that can provide significant speedups for
tokenization workloads.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,5 +37,9 @@ dev = [
 full = [
     "lxml>=4.0.0",  # Faster XML parsing for database building
     "tqdm>=4.0.0",  # Progress bars for database building
+    "marisa-trie>=1.0.0",  # Fast trie-based dictionary lookups
+]
+trie = [
+    "marisa-trie>=1.0.0",  # Fast trie-based dictionary lookups
 ]
 
